--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ VUE_APP_TITLE=D2Admin
 
 # 网络请求公用地址
 VUE_APP_API=/api/
+# VUE_APP_API=localhost:1000
 
 # 仓库地址
 VUE_APP_REPO=https://github.com/d2-projects/d2-admin
