--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zhx-invest-ui",
+  "name": "zhx-ims-ui",
   "version": "1.7.2",
   "scripts": {
     "serve": "vue-cli-service serve --open",
